--- a/index.html
+++ b/index.html
@@ -375,30 +375,36 @@
                 </li>
                 <li>
                     <a class="firstmenu" href="javascript:;">
-                        <i class="fa fa-ticket"></i>
+                        <i class="fa fa-ticket"></i> 
                         <span>内容管理</span>
                     </a>
                     <ul>
                         <li class="sub-menu">
-                            <a class="apl40" href="./dataStatistics/platform_data.html">
+                            <a class="apl40" href="./contentmanage/articles_published.html">
+                                <i class="fa fa-align-justify"></i>
+                                <span>文章发布</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a class="apl40" href="./contentmanage/article_management.html">
                                 <i class="fa fa-align-justify"></i>
                                 <span>文章发布</span>
                             </a>
                         </li>
                         <li>
-                            <a class="apl40" href="./dataStatistics/user_statistics.html">
+                            <a class="apl40" href="./contentmanage/setbanner.html">
                                 <i class="fa fa-sort-numeric-asc"></i>
                                 <span>banner管理</span>
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a class="apl40" href="./dataStatistics/funds_statistics.html">
+                            <a class="apl40" href="javascript:;">
                                 <i class="fa fa-gift"></i>
                                 <span>合同管理</span>
                             </a>
                             <ul class="sub">
-                            	<li><a class="alast" href="">合同管理</a></li>
-                                <li><a class="alast" href="">合同发布</a></li>
+                            	<li><a class="alast" href="./contentmanage/contract_management.html">合同管理</a></li>
+                                <li><a class="alast" href="./contentmanage/contract_release.html">合同发布</a></li>
                             </ul>
                         </li>
                     </ul>
