--- a/contentmanage/articles_published.html
+++ b/contentmanage/articles_published.html
@@ -427,7 +427,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label col-lg-1">文章栏目：</label>
                         <div class="col-lg-6">
-                            <select id="e1" class="populate searchSelect" style="width: 250px">
+                            <select class="form-control"  id="source" style="width: 250px">
                                 <option value="1">123</option>
                                 <option value="2">654</option>
                                 <option value="3">798</option>
@@ -462,7 +462,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label col-lg-1">文章内容：</label>
                         <div class="col-lg-7">
-                                <textarea name="" rows="10" style="width:100%;"></textarea>
+		                        <textarea class="form-control ckeditor" name="editor1" rows="6"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
