--- a/index.html
+++ b/index.html
@@ -213,30 +213,25 @@
                         <li class="sub-menu">
                             <a class="apl40" href="javascript:;">
                                 <i class="fa fa-user"></i>
-                                <span>用户列表</span>
+                                <span>前台注册用户</span>
                             </a>
                             <ul class="sub">
-                                <li><a class="alast" href="">前台用户</a></li>
-                                <li><a class="alast" href="./admin/userlist.html">后台用户</a></li>
+                                <li><a class="alast" href="./admin/all_admin.html">全部用户</a></li>
+                                <li><a class="alast" href="./admin/adim_base_info.html">基本信息</a></li>
+                                <li><a class="alast" href="./admin/adim_invest.html">投资信息</a></li>
+                                <li><a class="alast" href="./admin/account_capital.html">资金流水</a></li>
+                                <li><a class="alast" href="./admin/borrow_info.html">借款信息</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a class="apl40" href="admin/role.html">
-                                <i class="fa fa-male"></i>
-                                <span>角色管理</span>
-                            </a>
-                        </li>
-                        <li class="sub-menu">
                             <a class="apl40" href="javascript:;">
-                                <i class="fa fa-unlock-alt"></i>
-                                <span>权限管理</span>
+                                <i class="fa fa-male"></i>
+                                <span>后台管理员</span>
                             </a>
-                        </li>
-                        <li class="sub-menu">
-                            <a class="apl40" href="./admin/operation_log.html">
-                                <i class="fa fa-stack-exchange"></i>
-                                <span>操作日志</span>
-                            </a>
+                            <ul class="sub">
+                                <li><a class="alast" href="./admin/userlist.html">后台管理员列表</a></li>
+                                <li><a class="alast" href="./admin/role.html">管理员权限配置列表</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
